changed color operators

--- a/index.css
+++ b/index.css
@@ -56,5 +56,6 @@ body {
 
 .calculator__content-item--margin {
   margin-right: 0;
+  background-color: #bcecec;
 }
 /*# sourceMappingURL=index.css.map */
