--- a/index.scss
+++ b/index.scss
@@ -34,6 +34,7 @@ body{
             justify-content: center;
             &--margin {
                 margin-right: 0;
+                background-color: #bcecec;
             }
         }
     }
